style.css
/*
TO-DO geral:
- xingar a tabela. e depois resolver.
    - tamanhos nao-fixos
    - alguma outra propriedade misteriosa de tabelas
- descobrir como colocar icone no final do input
- colocar icones
    - estrela (favorito), pedido (geral), mensagem (menu de aba)
- revisar comparando com a imagem original

TO-DO mobile:
- deixar card aba selecionado azul
- a tal da tabela
*/


/* initial config */
:root {
    --titleBlue:#414B6C;
    --textGray:#6B7280;
    --linkBlue:#29BDDE;
    --backgroundGray:#F5F5F5;
    --white:#fff;
    --dividerGray:#C2CDE4;
    --tableTitle:#1C4ED8;
    --tableArea:#D9E7F2;
    --tableDivider:#DBE9FE;
    --tagBackground:#FEF3C7;
    --tagText:#B4540A;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    width: 100vw;
    display: flex;
    gap: 1%;
    padding: 1%;
    font-family: 'Roboto', 'Arial', sans-serif;
    background-color: var(--white);
}

aside {
    background-color: var(--white);
    height: 100%;
    width: 20%;
    overflow: scroll;
    padding: 1ch;
}

button {
    background-color: none;
    border-radius: 5px;
    cursor: pointer;
}

button:hover {
    background-color: var(--tableArea);
}

main {
    background-color: var(--backgroundGray);
    height: 100%;
    width: 80%;
    padding: 2ch;
    border-radius: 5px;
    gap: 2%;
}

table {
    background-color: var(--white);
    outline: 1px solid var(--dividerGray);
    border-radius: 18px;
    border-collapse: collapse;
    overflow: scroll;
}

th, td {
    border: 1px var(--tableDivider);
    border-style: solid none solid none;
    padding: 1.5ch 3ch;
}

th {
    background-color: var(--tableArea);
    color: var(--tableTitle);
    text-align: left;
}

td {
    color: var(--titleBlue);
}

/* classes */

.flex-container-v {
    display: flex;
    flex-direction: column;
}

.flex-container-h {
    display: flex;
    flex-direction: row;
}

.link {
    color: var(--linkBlue);
    text-decoration: underline;
    font-size: small;
}

.search {
    border: 1px solid var(--tableTitle);
    border-radius: 5px;
    color: var(--titleBlue);
    font-size: small;
    padding: 1ch;
    min-width: fit-content;
}

.action-button {
    border: none;
}

aside .search {
    width: 100%;
}

.title {
    color: var(--titleBlue);
    font-weight: bold;
}

main .title {
    font-size: larger;
}

aside .card-cinza {
    background-color: var(--backgroundGray);
    padding: 1ch;
    border-radius: 3px;
    margin-bottom: 1ch;
}

.card-azul {
    background-color:var(--white);
    border: 1px solid var(--dividerGray);
    font-size: small;
    min-width: fit-content;
    height: inherit;
    border-radius: 8px;
    padding: 1.5ch;
}

aside .icon {
    height: 2.5ch;
    background-color: var(--backgroundGray);
    padding: 3px;
    border-radius: 999px;
}

aside button .icon {
    background-color: none;
    padding: 0px;
    border-radius: 0px;
}

main .icon {
    height: 2ch;
    margin-right: 0.5ch;
}

button img.icon {
    margin: 0px;
}

.area-header .card-azul {
    display: flex;
    align-items: center;
}

.card-azul-container {
    gap: 8px;
}

main .card-azul-container {
    display: flex;
    overflow: scroll;
    font-size: x-small;
    height: fit-content;
}

aside .card-azul-container {
    display: flex;
    flex-direction: column;
    overflow: scroll;
}

.card-azul-ti {
    color: var(--tableTitle);
    font-size: small;
    font-weight: bold;
}

.card-azul-de {
    color: var(--textGray);
    font-size: smaller;
    font-weight: 400;
}

.area-header {
    display: flex;
    justify-content: space-between;
}

.tag-alerta{
    background-color: var(--tagBackground);
    color: var(--tagText);
    font-size: small;
    font-weight: bold;
    text-align: center;
    border-radius: 8px;
    padding: 1ch 0.5ch;
}

/* media query */

/* tablet */
@media screen and (max-width: 800px) {

    /* tags */

    body {
        display: flex;
        flex-direction: column;
    }

    aside {
        width: 100%;
        height: max-content;
        overflow: visible;
    }

    main {
        width: 100%;
        height: fit-content;
    }

    /* TEMPORARIO*/
    table {
        display: none;
        overflow: scroll;
        width: fit-content;
    }

    /* classes */

    aside .search {
        width: 100%;
    }

    .card-azul-container {
        display: flex;
        flex-direction: row;
        overflow: scroll;
    }

}

/* telefone */

@media screen and (max-width: 550px) {
    
    
}

